--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  text-align: center;
+  
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,28 +11,34 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white; */
+  text-align: left;
+  padding-left: 10px;
+  background-color: #1C365A;
+  height: 60px;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.App-header > h1 {
+  margin: unset;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-body {
+  background-color: #d9dde2;
+  height: 100vh;
+}
+
+.App-body .tabpanel {
+  padding: 40px; 
 }
